# TMCARS_DATA

./: main.py  pyproject.toml
real_estate/real_estate/: real_first.csv  real_first.json  settings.py
real_estate/real_estate/spiders/: real_first.py
real_estate2/: real_second.csv  real_second.json  scrapy.cfg
real_estate2/real_estate2/: items.py  middlewares.py  pipelines.py  real_test2.csv  settings.py
real_estate2/real_estate2/spiders/: real_second.py
real_estate3/: crawler_dashboard.py  real_third2.json  real_third3.json  real_third4.json  requirements.txt  scrapy.cfg  test_db.py
real_estate3/real_estate3/: 14.06.2026.xlsx  15.06.2026.xlsx  16.06.2026.xlsx  export.py  items.py  middlewares.py  pipelines.py  private_owners.xlsx  real_estate.xlsx  real_third.csv  real_third.json  real_third1.json  real_third2.json  real_third_frontend.html  settings.py
real_estate3/real_estate3/spiders/: real_third.py
